<resources>
    <string name="app_name">DummyJsonApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="slogan">Türkiye\'nin Alışveriş Uygulaması</string>
    <string name="shop_app">Shop App</string>
    <string name="login">Login</string>
    <string name="you_can_not_empty_value">You can not empty value!</string>
    <string name="back">Back</string>
</resources>